--- a/packages/@sanity/default-layout/package.json
+++ b/packages/@sanity/default-layout/package.json
@@ -31,7 +31,7 @@
   "dependencies": {
     "@sanity/base": "2.3.6",
     "@sanity/generate-help-url": "2.2.6",
-    "@sanity/ui": "^0.33.3",
+    "@sanity/ui": "0.33.4-next.5",
     "@sanity/util": "2.2.6",
     "classnames": "^2.2.5",
     "is-hotkey": "^0.1.4",
